--- a/style.css
+++ b/style.css
@@ -1,1 +1,574 @@
-ECHO is on.
+/*
+Theme Name: MACCTI
+Theme URI: https://cianmulville.com/
+Author: Cian Mulville
+Author URI: https://cianmulville.com/
+Description: This is a custom Wordpress theme for Massachusetts Cannabis Compliance Training Institute (MACCTI)
+Version: 1.0
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Text Domain: twentyseventeen
+Tags: one-column, two-columns, right-sidebar, flexible-header, accessibility-ready, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, post-formats, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready
+This theme, like WordPress, is licensed under the GPL.
+Use it to make something cool, have fun, and share what you've learned with others.
+*/
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+* {
+    font-weight:normal;
+    font-family:'Proxima Nova', 'sans-serif';
+}
+a:hover {
+    text-decoration:none;
+}
+body {
+    font-family:'Proxima Nova', 'sans-serif';
+    font-weight: normal;
+    display:flex;
+    flex-direction: column;
+    min-height:100vh;
+    min-width:100%;
+}
+
+header {
+    background: linear-gradient(to bottom, #660066, #32214c 90%);
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+}
+#homepage header {
+    height:95vh;
+}
+
+main {
+    flex: 1 1 0;
+}
+
+ul, menu, dir {
+    display: block;
+    list-style-type: disc;
+    -webkit-margin-before: 32px;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0;
+    -webkit-margin-end: 0;
+    -webkit-padding-start: 1em;
+}
+
+.text-gray {
+    color:#6a6a6a;
+}
+
+.bullet-list {
+    list-style: disc;
+    font-size:28px;
+    font-weight:bold;
+}
+
+.text-center {
+    text-align:center;
+}
+
+h5 {
+    font-size:42px;
+    font-weight:bold;
+    color: #1e313b;
+    -webkit-margin-before:0;
+    -webkit-margin-after:0;
+}
+
+.bg-nav {
+    background-color: rgba(0,0,0,0.2);
+}
+.navbar-toggler {
+    outline:none !important;
+}
+.navbar-toggler i {
+    color:#ffffff;
+}
+
+.navbar-brand img{
+    height:110px;
+    width:auto;
+}
+
+.nav-item{
+    list-style: none;
+    text-align:center;
+}
+.nav-link:not(:last-child):after {
+    content: '|';
+    color:#fffbdc;
+    margin-left:20px;
+    margin-right:20px;
+}
+.nav-link {
+    text-align:center;
+    text-transform:uppercase;
+    color:#fffbdc;
+    text-decoration:none;
+    font-size: 18px;
+    font-weight: lighter;
+    font-family: 'Proxima Nova', sans-serif;
+}
+a.nav-link {
+    outline:none !important;
+}
+a.nav-link:hover {
+    color: #fafafa;
+}
+.main-banner {
+    flex: 1 1 0;
+}
+
+.main-banner .overlay {
+    background-position: center right;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 90%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* padding-left:50px; */
+}
+.main-banner .overlay-contents {
+    text-align: left;
+    max-width:500px;
+}
+
+.main-banner .overlay h3 {
+    font-size:35px;
+    color:#fffbdc;
+    padding-bottom:1em;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.img-responsive {
+    max-width:100%;
+    height:auto;
+    margin:auto;
+}
+
+.bg-light {
+    background-color: #fffded;
+    color:#32214c;
+}
+
+.home-banner {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.home-banner p{
+    max-width:800px;
+    margin:auto;
+    text-align:center;
+    color: #32214c;
+}
+
+.lead {
+    /* font-size:29px; */
+    font-size:24px;
+    
+}
+.home-banner-boxed {
+    display:flex;
+    flex-direction:column;
+    flex-wrap:wrap;
+}
+.home-banner-boxed .box {
+    width:100%;
+    padding:0;
+}
+.home-banner-boxed .box p {
+    padding:50px 0;
+    color:#fffbdc;
+    /* font-size:29px; */
+    font-size: 24px;
+    text-align:center;
+}
+.green {
+    background-color:#67aa3b;
+}
+.left-box.green {
+    background-color:#67aa3b;
+    background-image:url('images/dot-pattern.png');
+    background-size:cover;
+    background-position: center;
+}
+.box.right-box.first {
+    height:50vh;
+}
+.box.left-box.second {
+    height:50vh;
+    order:4;
+    background-position:top;
+}
+.right-box.first {
+    background-image:url('images/shutterstock_562748599.png');
+    background-size:cover;
+    background-position: center;
+}
+.box .overlay {
+    background-color:rgba(0,0,0,0.5);
+    height:100%;
+    width:100%;
+}
+.left-box.second {
+    background-image:url('images/male-cannabis-worker.png');
+    background-size:cover;
+    background-position:center;
+}
+.right-box.purple {
+    background-position: center;
+    background-color:#32214c;
+    background-image:url('images/dot-pattern.png');
+    background-size:cover;
+}
+.bg-white {
+    background-color:#ffffff;
+}
+.bg-purple {
+    background-color:#32214c;
+}
+.home-banner.bg-purple {
+    padding-top:50px;
+}
+.pt-50 {
+    padding-top:50px;
+}
+.pb-100 {
+    padding-bottom:100px;
+}
+.pb-200 {
+    padding-bottom:220px;
+}
+h3 {
+    font-size:42px;
+    -webkit-margin-before:0;
+    -webkit-margin-after:0;
+}
+.text-white {
+    color:#ffffff;
+}
+.maccti-flex-row {
+    display:flex;
+    flex-direction: column;
+    flex-wrap:wrap;
+}
+.container-offset .maccti-flex-row {
+    justify-content:center;
+    margin-top:-170px;
+}
+
+.price-box-single {
+    max-width:350px;
+    width:75%;
+    flex: 1 1 0;
+    margin: auto;
+    padding-bottom:30px;
+}
+.price-box-single:last-child .price-course-features {
+    /* padding-bottom:77px; */
+}
+.price-box-single:last-child h5 {
+    font-size:19px;
+    padding-top:22px;
+}
+.price-box-single:last-child .price {
+    /* font-size:28px; */
+}
+h5.box-top {
+    background-color:#f0f0f0;
+    color:#1e313b;
+    height:90px;
+    font-size:24px;
+    text-align:center;
+    padding-top:18px;
+    font-weight:400;
+}
+div.price {
+    color:#ffffff;
+    width:100%;
+    height:80px;
+    text-align:center;
+    font-size:36px;
+    position: relative;
+}
+div.price span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    text-align: center;
+    width:100%;
+}
+.price-box-single:first-of-type div.price {
+    background-color:#67aa3b;
+}
+.price-box-single:nth-of-type(2) div.price{
+    background-color:#660066;
+}
+.price-box-single:nth-of-type(3) div.price{
+    background-color:#ffc20e;
+}
+.price-course-features {
+    background-color:#fffded;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom:20px;
+}
+.price-course-features a {
+    padding:20px 0;
+}
+.price-course-features p {
+    font-size: 14px;
+    color: #32214c;
+    text-align: center;
+    margin-bottom: 6px;
+    margin-top: 6px;
+}
+.list-check {
+    list-style:none;
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0;
+    -webkit-margin-end: 0;
+    -webkit-padding-start: 0;
+    padding-top:24px;
+    padding-left:16px;
+}
+.list-check li:before{
+    content: '\2713';
+    color: #67aa3b;
+    font-size:22px;
+    margin-right:16px;
+    margin-left:-27px;
+}
+.list-check li {
+    font-size:22px;
+    color:#32214c;
+    padding-left:30px;
+}
+.text-darkish {
+    color:#1e313b;
+}
+h3.text-darkish {
+    font-weight:bold;
+}
+.home-banner p.text-darkish {
+    color:#1e313b;
+}
+.text-large {
+    font-size:42px;
+}
+.text-medium {
+    font-size:30px;
+}
+.uppercase {
+    text-transform: uppercase;
+}
+footer {
+    padding-bottom:15px;
+}
+.footer-banner {
+    border-bottom:1px solid #000000;
+    color:#c9c9c9;
+}
+.footer-banner p {
+    font-size:18px;
+    color:#c9c9c9;
+    text-align:center;
+    text-transform: uppercase;
+}
+.footer-banner p i {
+    padding:0px 20px;
+    margin-top:6px;
+    font-size:30px;
+    color: #7a7a7a;
+}
+.payment-info img.img-responsive {
+    display:none;
+}
+.justify-content-center {
+    justify-content: center;
+}
+.text-purple {
+    color:#660066 !important;
+}
+.large-p {
+    font-size:30px;
+}
+#what-you-learn {
+    margin: auto;
+    margin-top: 30px;
+}
+#contact-form button[type="submit"], .price-box-single a {
+    border:none;
+    border-radius: 24px;
+    padding:8px 16px;
+    color:#fff;
+    text-transform: uppercase;
+    outline: none !important;
+    text-align:center;
+    font-weight:bold;
+}
+.price-box-single a {
+    margin:auto;
+    margin-top:10px;
+    width:220px;
+}
+#contact-form button[type="submit"] {
+    background:linear-gradient(to right, #32214c, #660066);
+
+}
+.price-box-single:first-of-type a {
+    background: #67aa3b;
+}
+.price-box-single:nth-of-type(2) a {
+    background:#660066;
+
+}
+.price-box-single:nth-of-type(3) a {
+    background:#ffc20e;
+}
+#contact-form button i, .price-box-single a i {
+    border-radius:50%;
+    padding:5px;
+    border: 1px solid #fff;
+    margin-left:5px;
+    margin-right:-5px;
+}
+#contact-form button[type="submit"]:hover {
+    background:linear-gradient(to left, #32214c, #660066);
+}
+#contact-form .messages p {
+    /* background-color:#67aa3b; */
+    color:#67aa3b;
+    text-align:left;
+    padding-bottom:30px;
+    margin-left:0;
+}
+@media(max-width:767px) {
+    .navbar-fixed-top {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 1030;
+    }
+    .bg-nav {
+        background-color:#291b3d;
+    }
+    header {
+        padding-top:136px;
+    }
+    .main-banner .overlay {
+        padding-left:15px;
+    }
+}
+@media(min-width:768px) {
+    .nav-item:not(:last-of-type) .nav-link::after {
+        content: '';
+        margin-left: 15px;
+        border-right: 1px solid white;
+    }
+
+}
+@media(min-width:768px) and (max-width: 991px) {
+    a.nav-link {
+        font-size: 16px;
+    }
+}
+@media(max-width:991px) {
+    .main-banner .overlay {
+        background-image: url(images/dot-pattern.png);
+    background-position: center;
+    }
+}
+@media(max-width:811px) {
+    .maccti-flex-row .col-half:nth-child(1) {
+        order:2;
+        padding-top:40px;
+    }
+    .maccti-flex-row .col-half:nth-child(2) h5{
+        text-align: center;
+    }
+}   
+@media(min-width:812px) {
+    .price-box-single:nth-of-type(3) a {
+        /* margin-top:40px; */
+    }
+    .price-box-single:last-child .price-course-features {
+        /* padding-bottom:77px; */
+    }
+    .maccti-flex-row {
+        flex-direction:row;
+    }
+    .maccti-flex-row .col-half {
+        width:50%;
+    }
+    .maccti-flex-row .col-third {
+        width:33%;
+    }
+    .price-box-single {
+        max-width:250px;
+        flex: 1 1 0;
+        margin:0 20px;
+    }
+    #what-you-learn {
+        margin-top: 0px;
+    }
+    .home-banner-boxed .box p {
+        padding: 120px 100px;
+    }
+    .payment-info img.img-responsive {
+        height: 30px;
+        display:block;
+    }
+    .home-banner-boxed .box {
+        width:50%;
+        padding:0;
+    }
+    .home-banner-boxed {
+        flex-direction:row;
+    }
+    .box.right-box.first {
+        height:auto;
+    }
+    .box.left-box.second {
+        height:auto;
+        order: 3;
+    }
+    .box.right-box.purple.second {
+        order: 4;
+    }
+    .home-banner-boxed .box p {
+        padding: 50px 10px;
+        line-height:30px;
+        max-width: 600px;
+        margin: auto;
+        font-weight:300;
+    }
+    
+}
+@media(min-width:992px) {
+
+    .main-banner .overlay {
+        background-image: url(images/Rosette.png);
+    }
+    .home-banner-boxed .box p {
+        padding: 50px;
+    }
+    
+}
+@media(min-width:1200px) {
+    .main-banner .overlay h3 {
+        font-size:48px;
+    }
+    .home-banner-boxed .box p {
+        padding: 100px;
+    }
+}
