--- a/style.css
+++ b/style.css
@@ -521,6 +521,43 @@ footer {
     flex-flow:column;
 }
 
+#contact-form .row {
+    margin: 0;
+    width: 100%;
+}
+
+div#wpcf7-f59-p10-o1 p:nth-of-type(1), div#wpcf7-f59-p10-o1 p:nth-of-type(2), div#wpcf7-f59-p10-o1 p:nth-of-type(3) {
+    width: 30%;
+    /* float: left; */
+    /* flex: 1; */
+    /* padding: 1em; */
+    position: relative;
+}
+
+div#wpcf7-f59-p10-o1 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+div#wpcf7-f59-p10-o1 p {
+    width: 100%;
+    /* flex: 3; */
+}
+
+div#wpcf7-f59-p10-o1 p label {
+    width: 100%;
+}
+
+div#wpcf7-f59-p10-o1 p label span input, div#wpcf7-f59-p10-o1 p label span textarea {
+    width: 95%;
+}
+
+h1#contact {
+    padding-left: 2%;
+    margin-bottom: 0.5em;
+}
+
 @media(min-width:768px) {
     .nav-item:not(:last-of-type) .nav-link::after {
         content: '';
